--- a/css/style.css
+++ b/css/style.css
@@ -16,21 +16,35 @@
 
 
 .content2{
-  background-color: #F5F5F5;
+  background-color: #ffffff;
+  width:100%;
+  height:auto;
+  float:left;
+}
+
+.produtos{
+  background-color: #004680;
+  width:100%;
+  height:auto;
+  float:left;
+}
+
+.carrinho{
+  background-color: #004680;
   width:100%;
   height:auto;
   float:left;
 }
 
 .footer{
-  background-color: #363636;
+  background-color: #333;
   width:100%;
   height:50px;
   float:left;
 }
 
 @media only screen and (max-width:500px) {
-  .header, .navbar, .content, .content2, .footer {
+  .header, .navbar, .content, .content2, .footer, .produtos {
     width: 100%;
   }
 }
