--- a/css/topnav.css
+++ b/css/topnav.css
@@ -23,7 +23,7 @@
 
 /* Add an active class to highlight the current page */
 .topnav a.active {
-  background-color: #2F4F4F;
+  background-color: #333;
   color: white;
 }
 
